flux/apps/cluster1/podinfo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  labels:
    keda.cluster.local/scale-to-zero: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: podinfo.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: podinfo
            port:
              number: 9898
